# judith

./: .gitignore  .gitmodules  readme.md
judith_vm/: .gitignore  CMakeLists.txt  cpp.hint
judith_vm/header/: Block.hpp  BlockReader.hpp  Chunk.hpp  ChunkReader.hpp  Object.hpp  VM.hpp  Value.hpp  _flags.h  main.hpp  root.hpp  types.hpp  utils.hpp
judith_vm/header/data/: AssemblyFile.hpp  ItemRef.hpp  StringTable.hpp
judith_vm/header/debug/: chunk.hpp  disassembly.hpp
judith_vm/header/diagnostics/: disassembly.hpp
judith_vm/header/executable/: Assembly.hpp  Block.hpp  Chunk.hpp  ConstantType.hpp  FuncRef.hpp  Function.hpp  FunctionCollection.hpp  ItemRef.hpp  StringTable.hpp  VmFunc.hpp
judith_vm/header/jal/: opcodes.hpp
judith_vm/header/jasm/: opcodes.hpp
judith_vm/header/loader/: AssemblyLoader.hpp
judith_vm/header/runtime/: Assembly.hpp  Block.hpp  Chunk.hpp  ConstantType.hpp  ExecutionContext.hpp  FuncRef.hpp  FunctionCollection.hpp  InternedStringTable.hpp  JasmFunction.hpp  NativeAssembly.constants.hpp  NativeAssembly.functions.hpp  NativeAssembly.hpp  Object.hpp  Value.hpp  VmFunc.hpp
judith_vm/header/utils/: Buffer.hpp
judith_vm/res/: test.jbin
judith_vm/src/: BlockReader.cpp  Chunk.cpp  ChunkReader.cpp  VM.cpp  Value.cpp  main.cpp  utils.cpp
judith_vm/src/data/: AssemblyFile.cpp  StringTable.cpp
judith_vm/src/debug/: chunk.cpp  disassembly.cpp
judith_vm/src/diagnostics/: disassembly.cpp
judith_vm/src/executable/: Assembly.cpp  Block.cpp  Chunk.cpp  FuncRef.cpp
judith_vm/src/loader/: AssemblyLoader.cpp
judith_vm/src/runtime/: Assembly.cpp  Block.cpp  Chunk.cpp  (+5 more)
(+347 files in other folders)
